2008-12-06  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (document_uri): New attribute.

	* ContentChecker.pm: Don't use methods not implemented by NanoDOM.

2008-11-07  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (text_content): Don't create a Text node if the new
	value is empty.

2008-11-06  Wakaba  <wakaba@suika.fam.cx>

	* SWML/: New directory.

2008-10-20  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (specified, all_declarations_processed,
	manakai_attribute_type): New attributes.

2008-10-19  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (Entity->new): Initialize ->child_nodes as an empty
	array.

2008-10-19  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (notation_name): New attribute.

2008-10-18  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (public_id, system_id): New attributes.a

2008-10-18  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (text_content): Moved to Node from Element.  Setter
	implemented.
	(allowed_tokens, default_type, declared_type): Implemented.

2008-10-17  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (node_name): New attribute.
	(ELEMENT_TYPE_DEFINITION_NODE, ATTRIBUTE_DEFINITION_NODE): New
	constants.
	(create_element_type_definition_node, create_attribute_definition,
	create_notation, create_general_entity,
	get_element_type_definition_node,
	set_element_type_definition_node, get_general_entity_node,
	set_general_entity_node, get_notation_node, set_notation_node,
	get_attribute_definition_node, set_attribute_definition_node): New
	methods.
	(element_types, entities, notations, attribute_definitions): New
	attributes.
	(DocumentType): Support for child nodes, entities, notations, and
	element types.
	(Entity, Notation, ElementTypeDefinition, AttributeDefinition):
	New classes.

	* Dumper.pm: Support for general entities, notations, element type
	definitions, and attribute definitions.

2008-10-15  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (create_processing_instruction): New method.