@@ -1,7 +1,7 @@
 1..2646
 # Running under perl version 5.010000 for linux
-# Current time local: Sun Sep 21 19:05:11 2008
-# Current time GMT:   Sun Sep 21 10:05:11 2008
+# Current time local: Sat Dec  6 19:04:08 2008
+# Current time GMT:   Sat Dec  6 10:04:08 2008
 # Using Test.pm version 1.25
 # t/content-model-atom-1.dat
 ok 1
