@@ -1,7 +1,7 @@
-1..3201
+1..29
 # Running under perl version 5.010000 for linux
-# Current time local: Tue Oct  7 21:09:47 2008
-# Current time GMT:   Tue Oct  7 12:09:47 2008
+# Current time local: Sat Dec  6 19:04:06 2008
+# Current time GMT:   Sat Dec  6 10:04:06 2008
 # Using Test.pm version 1.25
 # t/dom-conformance/xml-1.dat
 ok 1
