@@ -1,4 +1,10 @@
-<Atom:feed xml:lang="en" xmlns="http://www.w3.org/2005/Atom" xmlns:Atom="http://www.w3.org/2005/Atom"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit</Atom:id><Atom:title>Whatpm ChangeLog diffs</Atom:title><Atom:updated>2008-12-06T10:00:48Z</Atom:updated><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit" hreflang="en" rel="self" type="application/atom+xml"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme" rel="related"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme#license" rel="license"></Atom:link><Atom:rights>This feed is free software; you can redistribute it and/or modify it under the same terms as Perl itself.</Atom:rights><entry xml:id="entry-1228557652"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1228557652</id><title>2008-12-06 Wakaba</title><updated>2008-12-06T10:00:48Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/t/ChangeLog	6 Dec 2008 10:00:34 -0000
+<Atom:feed xml:lang="en" xmlns="http://www.w3.org/2005/Atom" xmlns:Atom="http://www.w3.org/2005/Atom"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit</Atom:id><Atom:title>Whatpm ChangeLog diffs</Atom:title><Atom:updated>2008-12-06T10:05:19Z</Atom:updated><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit" hreflang="en" rel="self" type="application/atom+xml"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme" rel="related"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme#license" rel="license"></Atom:link><Atom:rights>This feed is free software; you can redistribute it and/or modify it under the same terms as Perl itself.</Atom:rights><entry xml:id="entry-1228557923"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1228557923</id><title>2008-12-06 Wakaba</title><updated>2008-12-06T10:05:19Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/Whatpm/ChangeLog	6 Dec 2008 10:05:14 -0000
+	* URIChecker.pm: Bug fix: It did not work unless
+	Message::DOM::DOMImplementation has been |require|d.
+
+2008-12-06  Wakaba  &lt;wakaba@suika.fam.cx&gt;
+
+</content></entry><entry xml:id="entry-1228557652"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1228557652</id><title>2008-12-06 Wakaba</title><updated>2008-12-06T10:00:48Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/t/ChangeLog	6 Dec 2008 10:00:34 -0000
 2008-12-06  Wakaba  &lt;wakaba@suika.fam.cx&gt;
 
 	* content-checker.pl: Use new XML parser for parsing test data.
